# cool-qrcode

./: .gitignore  LICENSE  MANIFEST.in  README.md  colors-reference.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  学生使用指南.md  小学生使用指南.md  设计对比.md  颜色参考.md
cool_qrcode/: __init__.py  core.py  exceptions.py  simple.py
docs/: API.md
examples/: advanced_usage.py  basic_usage.py  color_showcase.py  cool_qrcode_examples.py  default_size_demo.py  make_cool_qrcode_api.py  simple_usage.py
tests/: test_advanced_features.py  test_cool_qrcode_function.py  test_core.py  test_simple_api.py
